continued progress on handlebars, however seeds appear to broken

--- a/views/painting.handlebars
+++ b/views/painting.handlebars
@@ -1,5 +1,5 @@
 {{#if loggedIn}}
-<section class="painting">
+<section class="dashboard">
   <img src="/images/{{painting.filename}}" alt="{{painting.description}}">
   <div class="painting-details">
     <h3>{{painting.title}}</h3>
