--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,9 +24,9 @@
   </nav>
   <main>
     <aside>
-      <h2>Enjoy the galleries!</h2>
+      <h2>See what the techies are saying:</h2>
     </aside>
-    <div class="gallery">
+    <div class="post">
       {{{body}}}
     </div>
   </main>
