--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,10 +1,7 @@
 <section class="card">
-  <a href="/post/{{id}}">
-    <header>{{title}}</header>
+  <a href="/comment/{{id}}">
     <h3>{{post_date}}</h3>
     <h4>{{username}}</h4>
     <p>{{content}}</p>
-    <h6>Comments:</h6>
-    <p>{{> comment-details}}</p>
   </a>
 </section>
