added more routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
     <aside>
       <h2>See what the techies are saying:</h2>
     </aside>
-    <div class="post">
+    <div class="posts">
       {{{body}}}
     </div>
   </main>
