attempting to resolve route issues

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,8 @@
 
 <body>
   <header>
-    <h1>Welcome to the Regal Dog Tech Blog</h1>
+    <h6>Welcome to</h6>
+    <h1>the Regal Dog Tech Blog</h1>
   </header>
   <nav>
     <a href="/">Home</a>
@@ -24,10 +25,10 @@
   </nav>
   <main>
     <aside>
-      <h2>See what the techies are saying:</h2>
+      <h3>See what the techies are saying:</h3>
     </aside>
     <div class="posts">
-      {{{body}}}
+      {{{post}}}
     </div>
   </main>
   {{#if loggedIn}}
