--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 :root {
-  --primary: #3d5852;
-  --secondary: #86938f;
-  --tertiary: #5e877f;
-  --quatrinary: #6c6b67;
+  --primary: #244855;
+  --secondary: #E64833;
+  --tertiary: #874F41;
+  --quatrinary: #90AEAD;
   --light: #e3e4e3;
   --dark: #182c23;
   --error: rgb(228, 46, 1);
