--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
       <h3>See what the techies are saying:</h3>
     </aside>
     <div class="posts">
-      {{{post}}}
+      {{{body}}}
     </div>
   </main>
   {{#if loggedIn}}
