--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,10 +1,12 @@
 <section class="card">
   <a href="/post/{{id}}">
     <header>{{title}}</header>
-    <h3>{{post_date}}</h3>
+    <h3>{{format_date post_date}}</h3>
     <h4>{{username}}</h4>
     <p>{{content}}</p>
     <h6>Comments:</h6>
+    {{#each comments as |comment|}}
     <p>{{> comment-details}}</p>
+    {{/each}}
   </a>
 </section>
