--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -2,7 +2,7 @@
 <section class="post">
   <div class="post-details">
     <h3>{{post.title}}</h3>
-    <p>By: {{post.username}}</p>
+    <p>By: {{user.username}}</p>
     <p>{{post.content}}</p>
     <h6>Comments:</h6>
     {{#each comments as |comment|}}
