still resolving missing username issue in post detail handlebar

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,15 +1,5 @@
 {{#if loggedIn}}
-<section class="post">
-  <div class="post-details">
-    <h3>{{post.title}}</h3>
-    <p>By: {{user.username}}</p>
-    <p>{{post.content}}</p>
-    <h6>Comments:</h6>
-    {{#each comments as |comment|}}
-    {{> comment-details}}
-    {{/each}}
-  </div>
-</section>
+{{> post-details}}
 {{else}}
 <a href="/login">You must login first to view this page</a>
 {{/if}}
