--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,7 @@ main {
 aside {
   flex: 0;
   background-color: var(--tertiary);
-  padding: 80px;
+  padding: 50px;
   text-align: left;
   color: var(--light);
 }
@@ -137,7 +137,7 @@ img {
   color: var(--light);
   font-weight: bold;
   text-transform: uppercase;
-  margin: 0;
+  margin: 0 0 10px 0;
   background-color: var(--tertiary);
   padding: 0.625rem;
   border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
