--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,10 +1,11 @@
-<section class="card">
+<section class="post">
   <a href="/post/{{id}}">
     <header>{{title}}</header>
   </a>
   <h5>{{format_date post_date}}</h5>
-  <h5>{{username}}</h5>
+  <h5>{{User.username}}</h5>
   <p>{{content}}</p>
+  <br>
   <h6>Comments:</h6>
   {{#each comments as |comment|}}
   <p>{{> comment-details}}</p>
