--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,5 +1,4 @@
-<section class="card">
-    <h3>{{post_date}}</h3>
-    <h4>{{username}}</h4>
-    <p>{{content}}</p>
+<section class="comment">
+    <h5><b>{{User.username}}</b>, {{format_date comment_date}}</h5>
+    <p>-{{content}}</p>
 </section>
