--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,4 +1,4 @@
 <section class="comment">
-    <h5><b>{{User.username}}</b>, {{format_date comment_date}}</h5>
+    <h5><b>{{user.username}}</b>, {{format_date comment_date}}</h5>
     <p>-{{content}}</p>
 </section>
