--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -3,7 +3,7 @@
     <header>{{title}}</header>
   </a>
   <h5>{{format_date post_date}}</h5>
-  <h5>{{User.username}}</h5>
+  <h5>{{user.username}}</h5>
   <p>{{content}}</p>
   <br>
   <h6>Comments:</h6>
