--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,15 +1,17 @@
-<section class="container">
-  <h3 class="user-dashboard">{{user.username}}</h3>
-  <h4>User Posts:</h4>
-  <!-- If the user is logged in, render the posts -->
-  {{#if loggedIn}}
-  <section class="flex-row justify-center">
-    {{#each post.user as |post|}}
-    {{> post-details}}
-    {{/each}}
-  </section>
-</section>
-<!-- Otherwise, provide a link to login -->
+{{#if loggedIn}}
+{{> dashboard-details}}
 {{else}}
 <a href="/login">You must login first to view this page</a>
 {{/if}}
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const newPostButton = document.getElementById('newPostButton');
+    if (newPostButton) {
+      newPostButton.addEventListener('click', () => {
+        // Redirect the user to the page where they can create a new post
+        window.location.href = '/post/new'; // Adjust the URL as needed
+      });
+    }
+  });
+</script>
