--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -2,8 +2,8 @@
   <a href="/post/{{id}}">
     <header>{{title}}</header>
   </a>
-  <h5>{{format_date post_date}}</h5>
-  <h5>{{user.username}}</h5>
+  <p class="post-username">{{user.username}}</p>
+  <p class="post-date">{{format_date post_date}}</p>
   <p>{{content}}</p>
   <br>
   <h6>Comments:</h6>
