--- a/views/partials/dashboard-details.handlebars
+++ b/views/partials/dashboard-details.handlebars
@@ -1,16 +1,15 @@
 {{#if loggedIn}}
 <section class="container">
-  <h3 class="user-dashboard">{{user.username}}</h3>
-  <h4>User Posts:</h4>
+  <h3 class="user-dashboard">{{user.username}}'s Posts</h3>
   <section class="flex-row justify-center">
-    {{#each posts}}
+    {{#each posts as |post|}}
     {{> post-details}}
     {{/each}}
   </section>
   <button id="newPostButton">Create New Post</button>
 </section>
 {{else}}
-<section class="container">
+<section class="login-card">
   <p>You must log in to view this page. <a href="/login">Login</a> or <a href="/signup">Sign Up</a></p>
 </section>
 {{/if}}
