--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,5 +1,5 @@
 {{#if loggedIn}}
-{{> post-details}}
+{{> singlepost-details}}
 {{else}}
 <a href="/login">You must login first to view this page</a>
 {{/if}}
