building new post and new comment functions

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,10 +6,18 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
-    const newPostButton = document.getElementById('newPostButton');
+    const newPostButton = document.getElementById('newPostBtn');
     if (newPostButton) {
       newPostButton.addEventListener('click', () => {
-        window.location.href = '/post/new'; // Adjust the URL as needed
+        event.preventDefault(); // Prevent the default behavior of the button
+        const postForm = document.getElementById('postForm');
+        if (postForm) {
+          postForm.style.display = 'block'; // Show post form
+        }
+        const addPostbtn = document.getElementById('newPostBtn');
+        if (addPostbtn) {
+          addPostbtn.style.display = 'none'; // Hide add post button
+        }
       });
     }
   });
