--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
   --secondary: #E64833;
   --tertiary: #874F41;
   --quatrinary: #90AEAD;
+  --login: #577a7c;
   --light: #e3e4e3;
   --dark: #182c23;
   --error: rgb(228, 46, 1);
@@ -107,6 +108,14 @@ h6 {
     margin: 10px auto;
 }
 
+textarea {
+  width:50%;
+  min-width: 300px;
+  min-height: 100px;
+  margin-top: 2px;
+  /* resize: vertical; */
+}
+
 .post-username {
   font-weight: bold;
   font-size: 1em;
@@ -136,7 +145,7 @@ h6 {
 .form-input {
   width: 90%;
   padding: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--light);
   border-radius: 4px;
 }
 
@@ -156,7 +165,7 @@ h6 {
 
 .user {
   flex: 4;
-  background-color: #fff;
+  background-color: var(--light);
   padding: 50px;
   display: flex;
   flex-flow: row wrap;
@@ -164,20 +173,25 @@ h6 {
   align-items: center;
 }
 
-/* .btn-no-style {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 100%;
-  transition: color 0.1s;
-  margin-left: 16px;
-} */
-
 img {
   max-width: 100%;
   height: auto;
+}
+
+.center {
+  justify-content: center;
+}
+
+.single-post {
+  color: var(--dark);
+  background-color: var(--light);
+  margin: 20px;
+  padding: 10px;
+  /* flex: 0 1 40%; */
+  border: 7px double var(--dark);
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 700px;
 }
 
 .post {
@@ -191,6 +205,7 @@ img {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.single-post header,
 .post header {
   color: var(--light);
   font-weight: bold;
@@ -211,7 +226,7 @@ img {
 
 /* CARDS */
 .login-card {
-  background-color: #577a7c;
+  background-color: var(--login);
   color: var(--light);
   margin: 20px;
   padding: 10px;
