--- a/views/partials/dashboard-details.handlebars
+++ b/views/partials/dashboard-details.handlebars
@@ -1,12 +1,13 @@
+{{#if loggedIn}}
 <section class="container">
-  <h3 class="user-dashboard">{{user.username}}'s Posts</h3>
+  <h3 class="dashboard-title">{{user.username}}'s Posts</h3>
   <section class="flex-row justify-center">
     {{#each posts as |post|}}
       {{> post-details}}
     {{/each}}
   </section>
   <button id="newPostBtn">Create New Post</button>
-  <form id="postForm" style="display: none;">
+  <form class="post" id="postForm" style="display: none;">
     <label for="postTitle">Title:</label><br>
     <input type="text" id="postTitle" placeholder="Title your post" required><br><br>
     <label for="postContent">Content:</label><br>
