--- a/views/partials/dashboard-details.handlebars
+++ b/views/partials/dashboard-details.handlebars
@@ -12,7 +12,7 @@
     <input type="text" id="postTitle" placeholder="Title your post" required><br><br>
     <label for="postContent">Content:</label><br>
     <textarea id="postContent" placeholder="Write your post here" required></textarea><br><br>
-    <button type="button" class="submit" id="submitPost">Submit Post</button>
+    <button id="submitPostBtn">Submit Post</button>
   </form>
 </section>
 {{else}}
