--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -3,7 +3,7 @@
     <header>{{title}}</header>
   </a>
   <p class="post-username">{{user.username}}</p>
-  <p class="post-date">{{format_date post_date}}</p>
+  <p class="post-date">{{format_date createdAt}}</p>
   <p>{{content}}</p>
   <br>
   <h6>Comments:</h6>
