--- a/views/partials/dashboard-details.handlebars
+++ b/views/partials/dashboard-details.handlebars
@@ -3,7 +3,7 @@
   <h3 class="dashboard-title">{{user.username}}'s Posts</h3>
   <section class="flex-row justify-center">
     {{#each posts as |post|}}
-      {{> post-details}}
+      {{> dashboard-post-details}}
     {{/each}}
   </section>
   <button id="newPostBtn">Create New Post</button>
