update button working on first post on dashboard, not others

--- a/views/partials/dashboard-details.handlebars
+++ b/views/partials/dashboard-details.handlebars
@@ -15,11 +15,11 @@
     <button id="submitPostBtn">Submit Post</button>
   </form>
     <form class="post" id="updatePostForm" style="display: none;">
-    <label for="updatedPostTitle">Title:</label><br>
+    <label for="updatedPostTitle">Updated Title:</label><br>
     <input type="text" id="updatedPostTitle" placeholder="Title your post" required><br><br>
-    <label for="updatedPostContent">Content:</label><br>
+    <label for="updatedPostContent">Updated Content:</label><br>
     <textarea id="updatedPostContent" placeholder="Write your post here" required></textarea><br><br>
-    <button id="resubmitPostBtn">Submit Post</button>
+    <button id="resubmitPostBtn">Submit Updated Post</button>
   </form>
 </section>
 {{else}}
