--- a/views/partials/dashboard-post-details.handlebars
+++ b/views/partials/dashboard-post-details.handlebars
@@ -4,7 +4,8 @@
   </a>
   <div>
     <button class="deleteBtn" id="deletePostBtn" data-post-id="{{id}}">X</button>
-    <button class="updateBtn" id="updatePostBtn" data-post-id="{{id}}" data-title="{{post.title}}" data-content="{{post.content}}">Update</button>
+    <button class="updateBtn" id="updatePostBtn" data-post-id="{{id}}" data-title="{{title}}"
+      data-content="{{content}}">Update</button>
   </div>
   <p class="post-username">{{user.username}}</p>
   <p class="post-date">{{format_date createdAt}}</p>
