improve UI for login barrier

--- a/views/partials/dashboard-details.handlebars
+++ b/views/partials/dashboard-details.handlebars
@@ -24,6 +24,6 @@
 </section>
 {{else}}
 <section class="login-card">
-  <p>You must log in to view this page. <a href="/login">Login</a> or <a href="/signup">Sign Up</a></p>
+  <p class="login-card">You must log in to view this page. <a href="/login">Login</a> or <a href="/signup">Sign Up</a></p>
 </section>
 {{/if}}
