--- a/views/partials/new-post.handlebars
+++ b/views/partials/new-post.handlebars
@@ -10,6 +10,6 @@
 </form>
 {{else}}
 <section class="login-card">
-  <p>You must log in to view this page. <a href="/login">Login</a> or <a href="/signup">Sign Up</a></p>
+  <p class="login-card">You must log in to view this page. <a href="/login">Login</a> or <a href="/signup">Sign Up</a></p>
 </section>
 {{/if}}
