missed a file for update, all set

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 {{#if loggedIn}}
 {{> dashboard-details}}
 {{else}}
-<a href="/login">You must login first to view this page</a>
+<a class="login-card" href="/login">You must login first to view this page</a>
 {{/if}}
 
 <script>
