finalized file structure, added login-details handlebar for ease of reuse

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 {{#if loggedIn}}
 {{> dashboard-details}}
 {{else}}
-<a class="login-card" href="/login">You must login first to view this page</a>
+{{> login-details}}
 {{/if}}
 
 <script>
@@ -17,5 +17,4 @@ document.addEventListener('DOMContentLoaded', () => {
         });
     }
 });
-
 </script>
