--- a/views/partials/new-post.handlebars
+++ b/views/partials/new-post.handlebars
@@ -9,7 +9,5 @@
     <button type="submit" class="submit" id="submit">Submit</button>
 </form>
 {{else}}
-<section>
-  <p class="login-card">You must log in to view this page. <a href="/login">Login</a> or <a href="/signup">Sign Up</a></p>
-</section>
+{{> login-details}}
 {{/if}}
