--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,7 +1,7 @@
 {{#if loggedIn}}
 {{> singlepost-details}}
 {{else}}
-<a class="login-card" href="/login">You must login first to view this page</a>
+{{> login-details}}
 {{/if}}
 
 <script>
